include/petscdm.h

/*J
   DMType - String with the name of a PETSc `DM`. These are all the `DM` provided by PETSc.

   Level: beginner

   Note:
   These can be used with `DMSetType()` or the options database key `-dm_type` to set the specific data structures and algorithms to use with a specific `DM`.
   But more commonly one calls directly a constructor for a particular `DMType` such as `DMDACreate()`

.seealso: [](ch_dmbase), `DMSetType()`, `DMCreate()`, `DM`, `DMDACreate()`
J*/
typedef const char *DMType;
#define DMDA        "da"
#define DMCOMPOSITE "composite"
#define DMSLICED    "sliced"
#define DMSHELL     "shell"
#define DMPLEX      "plex"
#define DMREDUNDANT "redundant"
#define DMPATCH     "patch"
#define DMMOAB      "moab"
#define DMNETWORK   "network"
PETSC_EXTERN PetscErrorCode          DMCreate(MPI_Comm, DM *);
PETSC_EXTERN PetscErrorCode          DMClone(DM, DM *);
PETSC_EXTERN PetscErrorCode          DMSetType(DM, DMType);
PETSC_EXTERN PetscErrorCode          DMGetType(DM, DMType *);
PETSC_EXTERN PetscErrorCode DMView(DM, PetscViewer);
PETSC_EXTERN PetscErrorCode DMDestroy(DM *);
PETSC_EXTERN PetscErrorCode DMCreateGlobalVector(DM, Vec *);
PETSC_EXTERN PetscErrorCode DMCreateLocalVector(DM, Vec *);
PETSC_EXTERN PetscErrorCode DMGetLocalToGlobalMapping(DM, ISLocalToGlobalMapping *);
PETSC_EXTERN PetscErrorCode DMGetBlockSize(DM, PetscInt *);
PETSC_EXTERN PetscErrorCode DMCreateMatrix(DM, Mat *);
PETSC_EXTERN PetscErrorCode DMCreateInterpolation(DM, DM, Mat *, Vec *);
PETSC_EXTERN PetscErrorCode DMCreateInjection(DM, DM, Mat *);
PETSC_EXTERN PetscErrorCode DMRefine(DM, MPI_Comm, DM *);
PETSC_EXTERN PetscErrorCode DMCoarsen(DM, MPI_Comm, DM *);
PETSC_EXTERN PetscErrorCode DMRefineHierarchy(DM, PetscInt, DM[]);
PETSC_EXTERN PetscErrorCode DMCoarsenHierarchy(DM, PetscInt, DM[]);
PETSC_EXTERN PetscErrorCode DMSetFromOptions(DM);
PETSC_EXTERN PetscErrorCode DMSetUp(DM);
PETSC_EXTERN PETSC_DEPRECATED_FUNCTION(3, 12, 0, "DMDACreateAggregates()", ) PetscErrorCode DMCreateAggregates(DM, DM, Mat *);
PETSC_EXTERN PetscErrorCode DMGlobalToLocalBegin(DM, Vec, InsertMode, Vec);
PETSC_EXTERN PetscErrorCode DMGlobalToLocalEnd(DM, Vec, InsertMode, Vec);
PETSC_EXTERN PetscErrorCode DMLocalToGlobalBegin(DM, Vec, InsertMode, Vec);
PETSC_EXTERN PetscErrorCode DMLocalToGlobalEnd(DM, Vec, InsertMode, Vec);
PETSC_EXTERN PetscErrorCode DMLocalToLocalBegin(DM, Vec, InsertMode, Vec);
PETSC_EXTERN PetscErrorCode DMLocalToLocalEnd(DM, Vec, InsertMode, Vec);
PETSC_EXTERN PetscErrorCode DMConvert(DM, DMType, DM *);
/* Coordinate support */
PETSC_EXTERN PetscErrorCode DMGetCoordinateDM(DM, DM *);
PETSC_EXTERN PetscErrorCode DMGetCoordinateSection(DM, PetscSection *);
PETSC_EXTERN PetscErrorCode DMGetCoordinates(DM, Vec *);
PETSC_EXTERN PetscErrorCode DMSetCoordinates(DM, Vec);
PETSC_EXTERN PetscErrorCode DMGetCoordinatesLocal(DM, Vec *);
PETSC_EXTERN PetscErrorCode DMSetCoordinatesLocal(DM, Vec);
PETSC_EXTERN PetscErrorCode DMSetOptionsPrefix(DM, const char[]);
PETSC_EXTERN PetscErrorCode DMSetVecType(DM, VecType);
PETSC_EXTERN PetscErrorCode DMSetMatType(DM, MatType);
static inline PETSC_DEPRECATED_FUNCTION(3, 9, 0, "DMGetSection()", ) PetscErrorCode DMGetDefaultSection(DM dm, PetscSection *s)
{
  return DMGetLocalSection(dm, s);
}
static inline PETSC_DEPRECATED_FUNCTION(3, 9, 0, "DMSetSection()", ) PetscErrorCode DMSetDefaultSection(DM dm, PetscSection s)
{
  return DMSetLocalSection(dm, s);
}
static inline PETSC_DEPRECATED_FUNCTION(3, 9, 0, "DMGetGlobalSection()", ) PetscErrorCode DMGetDefaultGlobalSection(DM dm, PetscSection *s)
{
  return DMGetGlobalSection(dm, s);
}
static inline PETSC_DEPRECATED_FUNCTION(3, 9, 0, "DMSetGlobalSection()", ) PetscErrorCode DMSetDefaultGlobalSection(DM dm, PetscSection s)
{
  return DMSetGlobalSection(dm, s);
}
static inline PETSC_DEPRECATED_FUNCTION(3, 12, 0, "DMGetSectionSF()", ) PetscErrorCode DMGetDefaultSF(DM dm, PetscSF *s)
{
  return DMGetSectionSF(dm, s);
}
static inline PETSC_DEPRECATED_FUNCTION(3, 12, 0, "DMSetSectionSF()", ) PetscErrorCode DMSetDefaultSF(DM dm, PetscSF s)
{
  return DMSetSectionSF(dm, s);
}
static inline PETSC_DEPRECATED_FUNCTION(3, 12, 0, "DMCreateSectionSF()", ) PetscErrorCode DMCreateDefaultSF(DM dm, PetscSection l, PetscSection g)
{
  return DMCreateSectionSF(dm, l, g);
}
PETSC_EXTERN PetscErrorCode DMGetPointSF(DM, PetscSF *);